# TemplateCmakeVSCode

./: CMakeLists.txt  Icon.icns  main.cpp
